<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">U8SDK接入测试</string>
    <string name="demo_login">登录</string>
    <string name="demo_pay">支付</string>
    <string name="demo_result">debug：</string>
    <string name="asyx_registered_phone_register">手机注册</string>
    <string name="asyx_registered_normal_register">账号注册</string>
    <string name="asyx_registered_phone_hint">请输入正确的手机号码</string>
    <string name="asyx_registered_normal_hint">请输入账号</string>
    <string name="asyx_registered_password_hint">请输入密码</string>
    <string name="asyx_registered_sms_hint">请输入验证码</string>
    <string name="asyx_registered_sms_get">获取验证码</string>
    <string name="asyx_registered_login">已有账号</string>
    <string name="asyx_registered_quick_game">快速游戏</string>
    <string name="asyx_registered_submit">快速注册</string>
    <string name="asyx_login_submit">立即登录</string>
    <string name="asyx_login_change_password">修改密码</string>
    <string name="asyx_login_find_password">找回密码</string>
    <string name="asyx_change_old_password">请输入旧密码</string>
    <string name="asyx_change_new_password">请输入新密码</string>
    <string name="asyx_change_confirm_password">请确认新密码</string>
    <string name="asyx_change_submit">确认修改</string>
    <string name="asyx_find_phone_hint">请输入绑定手机号</string>
    <string name="asyx_find_submit">找回密码</string>
    <string name="asyx_prompt_submit">确定</string>
    <string name="asyx_binding_title">绑定手机</string>
    <string name="asyx_binding_hint">绑定手机可以保证账号安全，不用担心忘记密码！</string>
    <string name="asyx_binding_submit">立即绑定</string>
    <string name="asyx_automatic_login">自动登录中…</string>
    <string name="asyx_automatic_change">切换账号</string>
    <string name="asyx_recharge_title">订单确认</string>
    <string name="asyx_recharge_alipay">支付宝</string>
    <string name="asyx_recharge_weixin">微    信</string>
    <string name="asyx_recharge_bank">银行卡</string>
    <string name="asyx_recharge_aishangdou">平台币</string>
    <string name="asyx_recharge_cards">充值卡</string>
    <string name="asyx_recharge_colon">:</string>
    <string name="asyx_recharge_money_text">支付金额</string>
    <string name="asyx_recharge_game_text">游戏名称</string>
    <string name="asyx_recharge_goods_text">商品名称</string>
    <string name="asyx_recharge_account_text">购买账号</string>
    <string name="asyx_recharge_hint_text">请确认订单再进行充值</string>
    <string name="asyx_recharge_platform_hint">注意：平台币余额不足自动扣除可体现余额！</string>
    <string name="asyx_recharge_submit">立即充值</string>
    <string name="asyx_recharge_card_lines">额度:</string>
    <string name="asyx_recharge_lines_hint">充值卡额度(如：20、50、100)</string>
    <string name="asyx_recharge_card_number">卡号:</string>
    <string name="asyx_recharge_number_hint">请输入充值卡卡号</string>
    <string name="asyx_recharge_card_password">密码:</string>
    <string name="asyx_recharge_password_hint">请输入充值卡密码</string>
    <string name="asyx_recharge_platform_money_text">支付金额    </string>
    <string name="asyx_recharge_platform_balance">平台币余额</string>
    <string name="asyx_recharge_withdrawal">可提现余额</string>
    <string name="asyx_recharge_pay_platform">应付平台币</string>
    <string name="asyx_recharge_platform_account_text">购买账号    </string>
    <string name="asyx_exit_hint">确定退出当前游戏？</string>
    <string name="asyx_exit_game">退出游戏</string>
    <string name="asyx_exit_more">更多游戏</string>
    <string name="asyx_sdk_version">v2.4.1</string>
</resources>
