<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/asyx_recharge_card_layout" android:background="@drawable/asyx_recharge_content_shape" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="8.0dip" android:layout_weight="0.2"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="#ff5fd2fe" android:layout_gravity="center" android:id="@id/asyx_recharge_card_money" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
    <RelativeLayout android:layout_gravity="center" android:background="@drawable/asyx_edittext_shape" android:layout_width="300.0dip" android:layout_height="34.0dip" android:layout_marginTop="5.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/asyx_options_text_color" android:gravity="center" android:id="@id/asyx_recharge_card_lines" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/asyx_recharge_card_lines" />
        <EditText android:textSize="16.0sp" android:textColor="@color/asyx_options_text_color" android:id="@id/asyx_card_lines" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/asyx_recharge_lines_hint" android:layout_toRightOf="@id/asyx_recharge_card_lines" android:inputType="number" />
    </RelativeLayout>
    <RelativeLayout android:layout_gravity="center" android:background="@drawable/asyx_edittext_shape" android:layout_width="300.0dip" android:layout_height="34.0dip" android:layout_marginTop="5.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/asyx_options_text_color" android:gravity="center" android:id="@id/asyx_recharge_card_number" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/asyx_recharge_card_number" />
        <EditText android:textSize="16.0sp" android:textColor="@color/asyx_options_text_color" android:id="@id/asyx_card_number" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/asyx_recharge_number_hint" android:layout_toRightOf="@id/asyx_recharge_card_number" android:inputType="number" />
    </RelativeLayout>
    <RelativeLayout android:layout_gravity="center" android:background="@drawable/asyx_edittext_shape" android:layout_width="300.0dip" android:layout_height="34.0dip" android:layout_marginTop="5.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/asyx_options_text_color" android:gravity="center" android:id="@id/asyx_recharge_card_password" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/asyx_recharge_card_password" />
        <EditText android:textSize="16.0sp" android:textColor="@color/asyx_options_text_color" android:id="@id/asyx_card_password" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/asyx_recharge_password_hint" android:layout_toRightOf="@id/asyx_recharge_card_password" android:inputType="textPassword" />
    </RelativeLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ff62d3ff" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/asyx_recharge_hint_text" />
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:src="@drawable/asyx_recharge_divider" android:scaleType="fitCenter" android:contentDescription="@string/app_name" />
    <Button android:textSize="18.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/asyx_recharge_card_submit" android:background="@drawable/asyx_recharge_submit_background" android:paddingLeft="100.0dip" android:paddingTop="12.0dip" android:paddingRight="100.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/asyx_recharge_submit" android:onClick="onClick" />
</LinearLayout>