<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/asyx_automatic_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="40.0dip">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/asyx_binding_title" android:layout_centerInParent="true" />
        <Button android:id="@id/asyx_binding_close" android:background="@drawable/asyx_sdk_close_white" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="5.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip">
        <EditText android:textSize="@dimen/asyx_registered_textsize" android:id="@id/asyx_binding_phone_number" android:background="@null" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_edittext" android:hint="@string/asyx_registered_phone_hint" android:inputType="phone" />
        <View android:background="@color/asyx_registered_divider" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_divider" />
        <EditText android:textSize="@dimen/asyx_registered_textsize" android:id="@id/asyx_binding_password" android:background="@null" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_edittext" android:hint="@string/asyx_registered_password_hint" android:inputType="textPassword" />
        <View android:background="@color/asyx_registered_divider" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_divider" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_edittext">
            <EditText android:textSize="@dimen/asyx_registered_textsize" android:id="@id/asyx_binding_sms_code" android:background="@null" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/asyx_registered_sms_hint" android:layout_weight="1.0" android:inputType="number" />
            <Button android:textSize="@dimen/asyx_registered_textsize" android:textColor="@android:color/white" android:id="@id/asyx_binding_sms" android:background="@color/asyx_registered_sms_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/asyx_registered_sms_get" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:background="@color/asyx_registered_divider" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_divider" />
    </LinearLayout>
    <TextView android:textSize="12.0sp" android:textColor="@color/asyx_registered_normal" android:gravity="center" android:background="@color/asyx_registered_background" android:paddingTop="8.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/asyx_binding_hint" />
    <Button android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/asyx_binding_submit" android:background="@android:color/transparent" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/asyx_binding_submit" />
</LinearLayout>