<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#cc000000" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="5.0dip" android:src="@drawable/asyx_logo_white" android:scaleType="fitCenter" android:contentDescription="@string/app_name" />
    <Button android:textColor="@color/asyx_options_text_color" android:id="@id/asyx_automatic_account" android:background="@drawable/asyx_dialog_shape" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="10.0dip" />
    <TextView android:textSize="16.0sp" android:textColor="@color/asyx_options_text_color" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/asyx_automatic_login" />
    <Button android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/asyx_automatic_change" android:background="@color/asyx_registered_selected" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="20.0dip" android:text="@string/asyx_automatic_change" />
</LinearLayout>