<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/asyx_dialog_shape" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:background="@android:color/transparent" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/asyx_background_radius">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="14.0dip">
                <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/asyx_login_logo" android:scaleType="fitCenter" android:contentDescription="@string/app_name" />
                <Button android:id="@id/asyx_login_colse" android:background="@drawable/asyx_sdk_close" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="14.0dip" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
                <View android:background="@color/asyx_registered_selected" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_divider" />
                <EditText android:textSize="@dimen/asyx_registered_textsize" android:id="@id/asyx_login_username" android:background="@null" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_edittext" android:hint="@string/asyx_registered_normal_hint" android:inputType="text" />
                <View android:background="@color/asyx_registered_divider" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_divider" />
                <EditText android:textSize="@dimen/asyx_registered_textsize" android:id="@id/asyx_login_password" android:background="@null" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_edittext" android:hint="@string/asyx_registered_password_hint" android:inputType="textPassword" />
                <View android:background="@color/asyx_registered_selected" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_divider" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_edittext" android:layout_marginTop="40.0dip">
                <Button android:textSize="@dimen/asyx_registered_textsize" android:textColor="@android:color/white" android:id="@id/asyx_login_change_password" android:background="@color/asyx_registered_selected" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="@dimen/asyx_registered_divider" android:text="@string/asyx_login_change_password" android:layout_weight="1.0" />
                <Button android:textSize="@dimen/asyx_registered_textsize" android:textColor="@android:color/white" android:id="@id/asyx_login_find_password" android:background="@color/asyx_registered_selected" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/asyx_registered_divider" android:text="@string/asyx_login_find_password" android:layout_weight="1.0" />
            </LinearLayout>
            <Button android:textSize="@dimen/asyx_registered_textsize" android:textColor="@android:color/white" android:id="@id/asyx_login_submit" android:background="@color/asyx_registered_selected" android:layout_width="fill_parent" android:layout_height="@dimen/asyx_registered_edittext" android:layout_marginTop="2.0dip" android:text="@string/asyx_login_submit" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>